# saba-android

./: .gitignore  CMakeLists.txt  LICENCE  README.cn.md  README.jp.md  README.md  README.zh.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build-android.yml
android/: build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/environments/: default_scenes.gobot
android/app/src/main/assets/models/: .gobot_project.json  default_actions.gobot
android/app/src/main/assets/shaders/: bg.frag  bg.vert  copy.frag  grid.frag  grid.vert  mmd.frag  mmd.vert  mmd_edge.frag  mmd_edge.vert  mmd_ground_shadow.frag  mmd_ground_shadow.vert  obj_shader.frag  obj_shader.vert  shadow_shader.frag  xfile_shader.frag  xfile_shader.vert
android/app/src/main/cpp/: CMakeLists.txt  action_recorder.cpp  action_recorder.h  android_viewer.cpp  android_viewer.h  bone_controller.cpp  bone_controller.h  egl_core.cpp  egl_core.h  environment_system.cpp  environment_system.h  filter_system.cpp  filter_system.h  gobot_framework.cpp  gobot_framework.h  jni_bridge.cpp
android/app/src/main/java/com/saba/viewer/: MainActivity.java  NativeGLSurfaceView.java  SettingsActivity.java
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-cn/: strings.xml
android/app/src/main/res/values-ja/: strings.xml
android/app/src/main/res/xml/: file_paths.xml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_model_loader.cpp  android_renderer.cpp  native_bridge.cpp
app/src/main/java/com/saba/viewer/: MainActivity.java  SabaNativeSurfaceView.java
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-zh/: strings.xml
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build_linux/example/: Makefile  cmake_install.cmake
build_linux/example/resource/shader/: filter.frag  grid_gles.frag
build_linux/gobot/: Makefile  cmake_install.cmake
build_linux/gtests/: Makefile  cmake_install.cmake
build_linux/resource/shader/: bg_gles.vert  filter_gles.frag  grid_gles.vert  mmd_edge_gles.vert  mmd_ground_shadow_gles.vert  shadow_shader_gles.vert
build_linux/src/: Makefile
build_linux/viewer/: Makefile  cmake_install.cmake
gobot/: CMakeLists.txt  README.md
gobot/examples/: README.md  sample_dance.gobot_action  sample_project.gobot_proj  sample_stage.gobot_scene
gobot/include/gobot/: GobotConverter.h  GobotFileIO.h  GobotTypes.h  gobot.h
gobot/src/: GobotConverter.cpp  GobotConverter.h  GobotFileIO.cpp  GobotFileIO.h
gradle/wrapper/: gradle-wrapper.properties
i/: 发送邮件.sh  操作记录.md  项目技术细节.md  项目说明.md
src/: CMakeLists.txt
src/Saba/Model/MMD/: MMDPhysics.h  ModelCache.cpp  ModelCache.h  TextureManager.cpp  TextureManager.h
unity-saba-viewer/: LICENSE
unity-saba-viewer/Assets/Editor/: BuildHelper.cs
unity-saba-viewer/Assets/Scenes/: MainScene.unity
unity-saba-viewer/Assets/Scripts/: AnimationController.cs  BoneController.cs  CameraController.cs  EnvironmentManager.cs  FilterManager.cs  GobotIntegration.cs  LanguageManager.cs  ModelLoader.cs  RecordingManager.cs  UIManager.cs
unity-saba-viewer/Assets/Scripts/Editor/: BuildHelper.cs
unity-saba-viewer/Assets/Scripts/Runtime/: AnimationController.cs  BoneController.cs  CameraController.cs  EnvironmentManager.cs  FilterManager.cs  GobotIntegration.cs  LanguageManager.cs  ModelLoader.cs  RecordingManager.cs  UIManager.cs
unity-saba-viewer/Assets/Shaders/: FilterShader.shader  MMDShader.shader
unity-saba-viewer/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
unity-saba-viewer/i/: 操作记录.md  项目技术细节.md  项目说明.md
viewer/: CMakeLists.txt
viewer/Saba/GL/: GLES_ShaderUtil.cpp  GLES_ShaderUtil.h  GLFilter.cpp  GLFilter.h  GLMMDClothingManager.cpp  GLMMDClothingManager.h  GLObject.h  GLShaderUtil.cpp  GLShaderUtil.h  GLTextureCache.cpp  GLTextureCache.h  GLTextureUtil.cpp  GLTextureUtil.h
viewer/Saba/GL/Model/MMD/: GLMMDClothingManager.cpp  GLMMDClothingManager.h
viewer/Saba/Viewer/: ActionClipPlayer.cpp  ActionClipPlayer.h  ActionRecorder.cpp  ActionRecorder.h  ActionSplitter.cpp  ActionSplitter.h  AnimationGenerator.cpp  AnimationGenerator.h  BoneManipulator.cpp  BoneManipulator.h  BonePanel.cpp  BonePanel.h  EnvironmentManager.cpp  EnvironmentManager.h  EnvironmentPanel.cpp  EnvironmentPanel.h  FilterPanel.cpp  FilterPanel.h  GobotIntegration.cpp  GobotIntegration.h  LocalizationManager.cpp  LocalizationManager.h  ModelPreloader.cpp  ModelPreloader.h  OptimizationPanel.cpp  OptimizationPanel.h  RecordingPanel.cpp  RecordingPanel.h  TexturePanel.cpp  TexturePanel.h  Viewer.cpp  Viewer.h  ViewerContext.h
viewer/Saba/Viewer/resource/shader/: bg_gles.frag  copy_gles.frag  filter.vert  filter_gles.vert  mmd_edge_gles.frag  mmd_gles.frag  mmd_gles.vert  mmd_ground_shadow_gles.frag  obj_shader_gles.frag  obj_shader_gles.vert  quad_gles.vert  shadow_shader_gles.frag  xfile_shader_gles.frag  xfile_shader_gles.vert
viewer/Saba/Viewer/resource/texture/: README.txt
